--- a/sample/src/charts/bubble-charts/binding-to-local-data.html
+++ b/sample/src/charts/bubble-charts/binding-to-local-data.html
@@ -1,6 +1,6 @@
 <template>
   <k-chart  k-title.bind="title"
-            k-data-source.bind="{data: jobGrowth}"
+            k-data-source.bind="{data: json.jobGrowth}"
             k-legend.bind="legend"
             k-series.bind="series"
             k-x-axis.bind="xAxis"
