--- a/sample/src/charts/radar-charts/binding-to-local-data.html
+++ b/sample/src/charts/radar-charts/binding-to-local-data.html
@@ -1,6 +1,6 @@
 <template>
   <k-chart  k-title.bind="{text: 'Protein quality, Apple raw'}"
-            k-data-source.bind="{data: proteinData}"
+            k-data-source.bind="{data: json.proteinData}"
             k-series.bind="series"
             k-category-axis.bind="{field: 'abbr'}"
             k-value-axis.bind="{visible: false}"
