--- a/sample/src/charts/scatter-charts/binding-to-local-data.html
+++ b/sample/src/charts/scatter-charts/binding-to-local-data.html
@@ -1,6 +1,6 @@
 <template>
   <k-chart  k-title.bind="{text: 'Price-Performance Ratio'}"
-            k-data-source.bind="{data: pricePerformance}"
+            k-data-source.bind="{data: json.pricePerformance}"
             k-legend.bind="{visible: false}"
             k-series-defaults.bind="{type: 'scatter'}"
             k-series.bind="series"
