--- a/sample/src/charts/waterfall-charts/binding-to-local-data.html
+++ b/sample/src/charts/waterfall-charts/binding-to-local-data.html
@@ -1,6 +1,6 @@
 <template>
   <k-chart  k-title.bind="{text: 'Cash flow'}"
-            k-data-source.bind="{data: cashFlowData}"
+            k-data-source.bind="{data: json.cashFlowData}"
             k-legend.bind="{visible: false}"
             k-series.bind="series"
             k-value-axis.bind="{labels: {format: 'C0'}}">
