--- a/sample/src/sample-runner.html
+++ b/sample/src/sample-runner.html
@@ -11,6 +11,7 @@
                     <li class="k-state-active" show.bind="sample.html">HTML</li>
                     <li show.bind="sample.js">Javascript</li>
                     <li show.bind="sample.css">CSS</li>
+                    <li show.bind="sample.json">JSON</li>
                     <li show.bind="sample.md">Documentation</li>
                 </ul>
                 <div>
@@ -23,6 +24,10 @@
                 </div>
                 <div>
                     <au-code language="css" url.bind="sample.css">
+                    </au-code>
+                </div>
+                <div>
+                    <au-code language="javascript" url.bind="sample.json">
                     </au-code>
                 </div>
                 <div>
