--- a/sample/src/charts/line-charts/binding-to-local-data.html
+++ b/sample/src/charts/line-charts/binding-to-local-data.html
@@ -1,6 +1,6 @@
 <template>
   <k-chart  k-title.bind="{text: 'Internet Users in United States'}"
-            k-data-source.bind="{data: internetUsers}"
+            k-data-source.bind="{data: json.internetUsers}"
             k-legend.bind="{ visible: false }"
             k-series-defaults.bind="seriesDefaults"
             k-series.bind="series"
