--- a/sample/index.html
+++ b/sample/index.html
@@ -3,6 +3,7 @@
   <head>
     <title>Aurelia</title>
     <link rel="stylesheet" href="jspm_packages/npm/font-awesome@4.5.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="styles/samples.css">
     <link rel="stylesheet" href="styles/styles.css">
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
