--- a/sample/src/theme-selector/theme-selector.html
+++ b/sample/src/theme-selector/theme-selector.html
@@ -1,16 +1,10 @@
 <template>
   <div class="tc-theme-list">
       <div class="tc-column">
-        <ul class="themes-grid" ref="listView"></ul>
+        <div repeat.for="theme of themes" click.delegate="selectTheme(theme)" class="tc-item">
+          <span repeat.for="color of theme.colors" class="tc-color" css="background-color: ${color}"></span>
+          <span class="tc-name">${theme.name}</span>
+        </div>
       </div>
   </div>
-
-  <script ref="template" type="text/x-kendo-template">
-      <li class="tc-item">
-          # for (var i = 0; i < colors.length; i++) { #
-              <span class="tc-color" style="background-color: #= colors[i] #"></span>
-          # } #
-          <span class="tc-name">#: name #</span>
-      </li>
-  </script>
 </template>
