--- a/sample/src/sample-selector/selector.html
+++ b/sample/src/sample-selector/selector.html
@@ -14,7 +14,7 @@
                           Implemented controls
                           &nbsp; &nbsp;
                           <img src="images/orange.png">
-                          controls under development
+                          controls in development
                       </span>
                   </p>
                   <br>
