--- a/sample/src/autocomplete/basic-use.html
+++ b/sample/src/autocomplete/basic-use.html
@@ -2,9 +2,7 @@
   <div id="example">
     <div class="demo-section k-content">
       <p><strong>People:</strong></p>
-      <p>
-        <input k-autocomplete="k-data-source.bind: items;">
-      </p>
+      <input k-autocomplete="k-data-source.bind: items;" style="width: 100%;">
       <p class="demo-hint" style="word-break: break-all">Type a name, available values in the list are: ${ items } </p>
     </div>
   </div>
