--- a/sample/src/button/basic-use.html
+++ b/sample/src/button/basic-use.html
@@ -1,4 +1,31 @@
 <template>
-  <button k-button class="k-primary">Primary Button</button>
-  <button k-button>Button</button>
+  <require from="./basic-use.css"></require>
+  <div id="example">
+      <div class="demo-section k-content">
+          <div>
+              <h4>Basic Button</h4>
+              <p>
+                  <button k-button class="k-primary">Primary Button</button>
+                  <button k-button>Button</button>
+              </p>
+          </div>
+
+           <div>
+              <h4>Disabled buttons</h4>
+              <p>
+                   <a k-button="k-enable.bind: false" class="k-primary">Disabled Primary Button</a>
+                   <a k-button="k-enable.bind: false">Disabled Button</a>
+              </p>
+          </div>
+
+          <div>
+             <h4>Buttons with icons</h4>
+              <p>
+                  <a k-button="k-sprite-css-class: k-icon k-i-funnel">Filter</a>
+                  <a k-button="k-icon: funnel-clear">Clear Filter</a>
+                  <em k-button="k-sprite-css-class: k-icon k-i-refresh"></em>
+              </p>
+          </div>
+      </div>
+  </div>
 </template>
