--- a/sample/src/button/images.html
+++ b/sample/src/button/images.html
@@ -1,7 +1,11 @@
 <template>
     <require from="./images.css"></require>
 
-    <button k-button="k-sprite-css-class: k-icon netherlandsFlag">Sprite icon</button>
-    <button k-button="k-icon: funnel">Kendo UI sprite icon</button>
-    <button k-button="k-image-url: http://demos.telerik.com/kendo-ui/content/shared/icons/sports/snowboarding.png">Image icon</button>
+    <div id="example">
+      <div class="demo-section k-content">
+          <button k-button="k-sprite-css-class: k-icon netherlandsFlag">Sprite icon</button>
+          <button k-button="k-icon: funnel">Kendo UI sprite icon</button>
+          <button k-button="k-image-url: http://demos.telerik.com/kendo-ui/content/shared/icons/sports/snowboarding.png">Image icon</button>
+      </div>
+    </div>
 </template>
