--- a/sample/src/shared/showcase.html
+++ b/sample/src/shared/showcase.html
@@ -1,7 +1,7 @@
 <template>
     <!-- Page is shared by all widgets and sets up the sub-navigation pane -->
     <section>
-        <h2>${ router.title }</h2>
+        <!-- <h2>${ router.title }</h2> -->
         <div>
             <div class="col-md-2">
                 <ul class="well nav nav-pills nav-stacked">
