update project status
closes https://github.com/aurelia-ui-toolkits/aurelia-kendoui-plugin/issues/215

--- a/sample/src/project-status/controls.html
+++ b/sample/src/project-status/controls.html
@@ -27,135 +27,135 @@
               <div class="col-xs-12 col-sm-2">
                   MOST POPULAR                                      <br>
                   <img src="images/orange.png">
-                  <a href="#/grid">Grid</a>                         <br>
-                  <a href="#">Editor</a>                            <br>
-                  <a href="#">Scheduler</a>                         <br>
+                  <a href="#/samples/grid">Grid</a>                         <br>
+                  <a>Editor</a>                            <br>
+                  <a>Scheduler</a>                         <br>
                   <img src="images/green.png">
-                  <a href="#/bar-charts">Bar Charts</a>             <br>
+                  <a href="#/samples/bar-charts">Bar Charts</a>             <br>
                   <img src="images/green.png">
-                  <a href="#/line-charts">Line Charts</a>           <br>
+                  <a href="#/samples/line-charts">Line Charts</a>           <br>
                   <img src="images/green.png">
-                  <a href="#/stock">Stock Charts</a>                <br>
-                  <a href="#/dropdownlist">DropDownList</a>         <br>
-                  <a href="#">Window</a>                            <br>
-                  <a href="#">Upload</a>                            <br>
-                  <a href="#">TreeView</a>                          <br>
+                  <a href="#/samples/stock">Stock Charts</a>                <br>
+                  <a href="#/samples/dropdownlist">DropDownList</a>         <br>
+                  <a>Window</a>                            <br>
+                  <a>Upload</a>                            <br>
+                  <a>TreeView</a>                          <br>
               </div>
 
              <div class="col-xs-12 col-sm-2">
                   DATA MANAGEMENT                                   <br>
                   <img src="images/orange.png">
-                  <a href="#/grid">Grid</a>                         <br>
-                  <a href="#">Spreadsheet</a>                       <br>
-                  <a href="#">Listview</a>                          <br>
-                  <a href="#">Pivot Grid</a>                        <br>
-                  <a href="#">TreeList</a>                          <br>
-                  <a href="#">ScrollView</a>                        <br>
+                  <a href="#/samples/grid">Grid</a>                         <br>
+                  <a>Spreadsheet</a>                       <br>
+                  <a>Listview</a>                          <br>
+                  <a>Pivot Grid</a>                        <br>
+                  <a>TreeList</a>                          <br>
+                  <a>ScrollView</a>                        <br>
                   <br>
                   EDITORS                                           <br>
                   <img src="images/green.png">
-                  <a href="#/autocomplete">Autocomplete</a>         <br>
-                  <a href="#">ColorPicker</a>                       <br>
-                  <a href="#/combobox">Combobox</a>                  <br>
-                  <a href="#">DatePicker</a>                        <br>
-                  <a href="#">DateTimePicker</a>                    <br>
+                  <a href="#/samples/autocomplete">Autocomplete</a>         <br>
+                  <a>ColorPicker</a>                       <br>
+                  <a href="#/samples/combobox">Combobox</a>                  <br>
+                  <a>DatePicker</a>                        <br>
+                  <a>DateTimePicker</a>                    <br>
                   <img src="images/orange.png">
-                  <a href="#/dropdownlist">DropDownList</a>         <br>
-                  <a href="#">Editor</a>                            <br>
-                  <a href="#">MaskedTextBox</a>                     <br>
-                  <a href="#">MultiSelect</a>                       <br>
-                  <a href="#">Numeric TextBox</a>                   <br>
+                  <a href="#/samples/dropdownlist">DropDownList</a>         <br>
+                  <a>Editor</a>                            <br>
+                  <a>MaskedTextBox</a>                     <br>
+                  <a>MultiSelect</a>                       <br>
+                  <a>Numeric TextBox</a>                   <br>
                   <img src="images/orange.png">
-                  <a href="#/slider">Slider</a>                            <br>
-                  <a href="#">TimePicker</a>                        <br>
-                  <a href="#">Upload</a>                            <br>
-                  <a href="#">Switch</a>                            <br>
+                  <a href="#/samples/slider">Slider</a>                            <br>
+                  <a>TimePicker</a>                        <br>
+                  <a>Upload</a>                            <br>
+                  <a>Switch</a>                            <br>
              </div>
 
              <div class="col-xs-12 col-sm-2">
                  CHARTS                                            <br>
                  <img src="images/green.png">
-                 <a href="#/area-charts">Area Charts</a>            <br>
+                 <a href="#/samples/area-charts">Area Charts</a>            <br>
                  <img src="images/green.png">
-                 <a href="#/bar-charts">Bar Charts</a>              <br>
+                 <a href="#/samples/bar-charts">Bar Charts</a>              <br>
                  <img src="images/green.png">
-                 <a href="#/box-plot-charts">Box Plot Charts</a>    <br>
+                 <a href="#/samples/box-plot-charts">Box Plot Charts</a>    <br>
                  <img src="images/green.png">
-                 <a href="#/bubble-charts">Bubble Charts</a>        <br>
+                 <a href="#/samples/bubble-charts">Bubble Charts</a>        <br>
                  <img src="images/green.png">
-                 <a href="#/bullet-charts">Bullet Charts</a>         <br>
+                 <a href="#/samples/bullet-charts">Bullet Charts</a>         <br>
                  <img src="images/green.png">
-                 <a href="#/donut-charts">Donut Charts</a>           <br>
+                 <a href="#/samples/donut-charts">Donut Charts</a>           <br>
                  <img src="images/green.png">
-                 <a href="#/funnel-charts">Funnel Charts</a>         <br>
+                 <a href="#/samples/funnel-charts">Funnel Charts</a>         <br>
                  <img src="images/green.png">
-                 <a href="#/line-charts">Line Charts</a>            <br>
+                 <a href="#/samples/line-charts">Line Charts</a>            <br>
                  <img src="images/green.png">
-                 <a href="#/pie-charts">Pie Charts</a>              <br>
+                 <a href="#/samples/pie-charts">Pie Charts</a>              <br>
                  <img src="images/green.png">
-                 <a href="#/polar-charts">Polar Charts</a>          <br>
+                 <a href="#/samples/polar-charts">Polar Charts</a>          <br>
                  <img src="images/green.png">
-                 <a href="#/radar-charts">Radar Charts</a>          <br>
+                 <a href="#/samples/radar-charts">Radar Charts</a>          <br>
                  <img src="images/green.png">
-                 <a href="#/range-charts">Range Bar Charts</a>      <br>
+                 <a href="#/samples/range-charts">Range Bar Charts</a>      <br>
                  <img src="images/green.png">
-                 <a href="#/scatter-charts">Scatter Charts</a>      <br>
+                 <a href="#/samples/scatter-charts">Scatter Charts</a>      <br>
                  <img src="images/green.png">
-                 <a href="#/sparkline">Sparklines</a>               <br>
+                 <a href="#/samples/sparkline">Sparklines</a>               <br>
                  <img src="images/green.png">
-                 <a href="#/stock">Stock Charts</a>                 <br>
+                 <a href="#/samples/stock">Stock Charts</a>                 <br>
                  <img src="images/green.png">
-                 <a href="#/treemap">TreeMap</a>                            <br>
+                 <a href="#/samples/treemap">TreeMap</a>                            <br>
                  <img src="images/green.png">
-                 <a href="#/waterfall-charts">Waterfall Charts</a>  <br>
+                 <a href="#/samples/waterfall-charts">Waterfall Charts</a>  <br>
                  <br>
                  GAUGES                                             <br>
-                 <a href="#">Linear Gauge</a>                       <br>
-                 <a href="#">Radial Gauge</a>                       <br>
+                 <a>Linear Gauge</a>                       <br>
+                 <a>Radial Gauge</a>                       <br>
              </div>
 
              <div class="col-xs-12 col-sm-2">
                  BARCODES                                           <br>
-                 <a href="#">Barcode</a>                            <br>
-                 <a href="#">QR Code</a>                            <br>
+                 <a>Barcode</a>                            <br>
+                 <a>QR Code</a>                            <br>
                  <br>
                  DIAGRAMS & MAPS                                    <br>
-                 <a href="#">Diagram</a>                            <br>
-                 <a href="#">Map</a>                                <br>
+                 <a>Diagram</a>                            <br>
+                 <a>Map</a>                                <br>
                  <br>
                  SCHEDULING                                         <br>
-                 <a href="#">Calendar</a>                           <br>
-                 <a href="#">Gantt</a>                              <br>
-                 <a href="#/scheduler">Scheduler</a>                <br>
-                 <a href="#"></a>                                   <br>
+                 <a>Calendar</a>                           <br>
+                 <a>Gantt</a>                              <br>
+                 <a href="#/samples/scheduler">Scheduler</a>                <br>
+                 <a></a>                                   <br>
              </div>
 
              <div class="col-xs-12 col-sm-2">
                  LAYOUT                                             <br>
-                 <a href="#">Notification</a>                       <br>
-                 <a href="#">Responsive Panel</a>                   <br>
-                 <a href="#">Splitter</a>                           <br>
-                 <a href="#">Tooltip</a>                            <br>
-                 <a href="#">Window</a>                             <br>
+                 <a>Notification</a>                       <br>
+                 <a>Responsive Panel</a>                   <br>
+                 <a>Splitter</a>                           <br>
+                 <a>Tooltip</a>                            <br>
+                 <a>Window</a>                             <br>
                  <br>
                  NAVIGATION                                         <br>
                  <img src="images/green.png">
-                 <a href="#/button">Button</a>                      <br>
-                 <a href="#">ButtonGroup</a>                        <br>
-                 <a href="#">Menu</a>                               <br>
-                 <a href="#">PanelBar</a>                           <br>
+                 <a href="#/samples/button">Button</a>                      <br>
+                 <a>ButtonGroup</a>                        <br>
+                 <a>Menu</a>                               <br>
+                 <a>PanelBar</a>                           <br>
                  <img src="images/orange.png">
-                 <a href="#/tabstrip">TabStrip</a>                  <br>
-                 <a href="#/toolbar">ToolBar</a>                    <br>
-                 <a href="#">TreeView</a>                           <br>
+                 <a href="#/samples/tabstrip">TabStrip</a>                  <br>
+                 <a href="#/samples/toolbar">ToolBar</a>                    <br>
+                 <a>TreeView</a>                           <br>
                  <br>
                  INTERACTIVITY &amp; UX                             <br>
-                 <a href="#">Drag &amp; Drop</a>                    <br>
-                 <a href="#">Effects</a>                            <br>
+                 <a>Drag &amp; Drop</a>                    <br>
+                 <a>Effects</a>                            <br>
                  <img src="images/orange.png">
-                 <a href="#/progressbar">ProgressBar</a>            <br>
-                 <a href="#">Sortable</a>                           <br>
-                 <a href="#">Styling</a>                            <br>
+                 <a href="#/samples/progressbar">ProgressBar</a>            <br>
+                 <a>Sortable</a>                           <br>
+                 <a>Styling</a>                            <br>
               </div>
           </div>
 
