--- a/sample/src/help/doc.html
+++ b/sample/src/help/doc.html
@@ -1,8 +1,8 @@
 <template>
   <div class="row k-content">
-    <div class="col-md-2">
+    <div class="col-md-3">
       <br>
-      <ul ref="panelbar">
+      <ul ref="panelbar" class="help-docs">
         <li repeat.for="category of categories">
           ${category.name}
           <ul>
@@ -11,7 +11,7 @@
         </li>
       </ul>
     </div>
-    <div class="col-md-9 col-sm-offset-0">
+    <div class="col-md-8">
       <au-markdown url.bind="activeDoc">
       </au-markdown>
     </div>
