add scroll bars to help
closes https://github.com/aurelia-ui-toolkits/aurelia-kendoui-plugin/issues/219

--- a/sample/src/help/doc.html
+++ b/sample/src/help/doc.html
@@ -1,5 +1,5 @@
 <template>
-  <div class="row k-content">
+  <div class="row k-content" id="doc">
     <div class="col-md-3">
       <br>
       <ul ref="panelbar" class="help-docs">
@@ -11,7 +11,7 @@
         </li>
       </ul>
     </div>
-    <div class="col-md-8">
+    <div class="col-md-9">
       <au-markdown url.bind="activeDoc">
       </au-markdown>
     </div>
