finish installation wizard
closes https://github.com/aurelia-ui-toolkits/aurelia-kendoui-plugin/issues/101

--- a/sample/src/samples/button/basic-use.html
+++ b/sample/src/samples/button/basic-use.html
@@ -1,6 +1,6 @@
 <template>
   <require from="./basic-use.css"></require>
-  <div id="example">
+  <div id="example" class="btn-basic-use">
       <div class="demo-section k-content">
           <div>
               <h4>Basic Button</h4>
