--- a/sample/src/nav-bar.html
+++ b/sample/src/nav-bar.html
@@ -9,7 +9,7 @@
         <a route-href="route: about">About</a>
     </li>
     <li>
-        <a route-href="route: install; params.bind: { page: 'begin' }">Install wizard</a>
+        <a route-href="route: installation">Installation</a>
     </li>
     <li>
         <a route-href="route: project-status">Project status</a>
