--- a/sample/src/samples/slider/basic-use.html
+++ b/sample/src/samples/slider/basic-use.html
@@ -1,5 +1,7 @@
 <template>
+    <require from="./basic-use.css"></require>
     <div id="example">
+      <div id="slider-basicuse">
         <div class="demo-section k-content">
             <h4>Balance</h4>
             <input k-slider="k-increase-button-title: Right;
@@ -10,61 +12,16 @@
                                     k-large-step.bind: 1" class="balSlider" value="0" />
             <h4 style="padding-top: 2em;">Equalizer</h4>
             <div id="equalizer">
-                <input k-slider="k-orientation: vertical;
+                <input repeat.for="value of equalizerSliderValues"
+                       k-slider="k-orientation: vertical;
                                         k-min.bind: -20;
                                         k-max.bind: 20;
+                                        k-value.bind: value;
                                         k-small-step.bind: 1;
                                         k-large-step.bind: 20;
-                                        k-show-buttons.bind: false" class="eqSlider" value="10" />
-                <input k-slider="k-orientation: vertical;
-                                        k-min.bind: -20;
-                                        k-max.bind: 20;
-                                        k-small-step.bind: 1;
-                                        k-large-step.bind: 20;
-                                        k-show-buttons.bind: false" class="eqSlider" value="5" />
-                <input k-slider="k-orientation: vertical;
-                                        k-min.bind: -20;
-                                        k-max.bind: 20;
-                                        k-small-step.bind: 1;
-                                        k-large-step.bind: 20;
-                                        k-show-buttons.bind: false" class="eqSlider" value="0" />
-                <input k-slider="k-orientation: vertical;
-                                        k-min.bind: -20;
-                                        k-max.bind: 20;
-                                        k-small-step.bind: 1;
-                                        k-large-step.bind: 20;
-                                        k-show-buttons.bind: false" class="eqSlider" value="10" />
-                <input k-slider="k-orientation: vertical;
-                                        k-min.bind: -20;
-                                        k-max.bind: 20;
-                                        k-small-step.bind: 1;
-                                        k-large-step.bind: 20;
-                                        k-show-buttons.bind: false" class="eqSlider" value="15" />
+                                        k-show-buttons.bind: false" class="eqSlider"/>
             </div>
         </div>
+      </div>
     </div>
-    <style>
-    .demo-section {
-        text-align: center;
-    }
-
-    #equalizer {
-        padding-right: 15px;
-    }
-
-    div.balSlider {
-        width: 100%;
-    }
-
-    div.balSlider .k-slider-selection {
-        display: none;
-    }
-
-    div.eqSlider {
-        display: inline-block;
-        margin: 1em;
-        height: 122px;
-        vertical-align: top;
-    }
-    </style>
 </template>
