--- a/sample/src/samples/charts/bar-charts/gap-and-spacing.html
+++ b/sample/src/samples/charts/bar-charts/gap-and-spacing.html
@@ -1,5 +1,6 @@
 <template>
-  <k-chart  k-title.bind="{text: 'Site Visitors Stats \n /thousands/'}"
+  <k-chart  view-model.ref="chart"
+            k-title.bind="{text: 'Site Visitors Stats \n /thousands/'}"
             k-legend.bind="{position: 'bottom'}"
             k-series-defaults.bind="seriesDefaults"
             k-series.bind="series"
@@ -13,8 +14,8 @@
           <h4>Gap</h4>
           <ul class="options">
               <li>
-                  <input id="gap" type="number" value="1.5" step="0.1" style="width: 80px;" />
-                  <button id="getGap" class="k-button">Set gap</button>
+                  <input ref="gap" type="number" value="1.5" step="0.1" style="width: 80px;" />
+                  <button click.delegate="getGap()" class="k-button">Set gap</button>
               </li>
           </ul>
       </div>
@@ -22,8 +23,8 @@
           <h4>Spacing</h4>
           <ul class="options">
               <li>
-                  <input id="spacing" type="number" value="0.4" step="0.1" style="width: 80px;" />
-                  <button id="getSpacing" class="k-button">Set spacing</button>
+                  <input ref="spacing" type="number" value="0.4" step="0.1" style="width: 80px;" />
+                  <button click.delegate="getSpacing()" class="k-button">Set spacing</button>
               </li>
           </ul>
       </div>
