--- a/sample/src/samples/charts/pie-charts/pie-labels.html
+++ b/sample/src/samples/charts/pie-charts/pie-labels.html
@@ -1,5 +1,6 @@
 <template>
-    <k-chart    k-title.bind="{text: 'What is you favourite sport?'}"
+    <k-chart    view-model.ref="chart"
+                k-title.bind="{text: 'What is you favourite sport?'}"
                 k-legend.bind="legend"
                 k-series-defaults.bind="seriesDefaults"
                 k-series.bind="series"
@@ -11,17 +12,15 @@
         <h4>Labels Configuration</h4>
         <ul class="options">
             <li>
-                <input id="labels" checked="checked" type="checkbox" autocomplete="off" />
+                <input id="labels" checked.bind="showLabels" change.delegate="refresh()" type="checkbox" autocomplete="off" />
                 <label for="labels">Show labels</label>
             </li>
             <li>
-                <input id="alignCircle" name="alignType" type="radio"
-                       value="circle" checked="checked" autocomplete="off" />
+                <input name="alignType" type="radio" value="circle" change.delegate="refresh()" checked.bind="align" disabled.bind="!showLabels" />
                 <label for="alignCircle">Aligned in circle</label>
             </li>
             <li>
-                <input id="alignColumn" name="alignType" type="radio"
-                       value="column" autocomplete="off" />
+                <input name="alignType" type="radio" value="column" change.delegate="refresh()" checked.bind="align" disabled.bind="!showLabels"/>
                 <label for="alignColumn">Aligned in columns</label>
             </li>
         </ul>
