--- a/sample/src/samples/grid/editing-custom-editor.html
+++ b/sample/src/samples/grid/editing-custom-editor.html
@@ -1,2 +1,10 @@
 <template>
+  <div id="example">
+    <k-grid k-pageable.bind="true" k-height.bind="500" k-toolbar.bind="['create']" k-editable.bind="true" k-data-source.bind="dataSource">
+      <au-col field="ProductName" title="Product Name"></au-col>
+      <au-col field="Category" title="Category" width="180px" editor.call="categoryDropDownEditor($event)" template.bind="categoryTemplate"></au-col>
+      <au-col field="UnitPrice" title="Unit Price" format="{0:c}" width="130px"></au-col>
+      <au-col command="destroy" title=" " width="150px"></au-col>
+    </k-grid>
+  </div>
 </template>
